[gd_scene load_steps=12 format=3 uid="uid://ck5mn8qaq2x4w"]

[ext_resource type="Script" uid="uid://bdsrw7sx7owxy" path="res://script/killer.gd" id="1_killer"]
[ext_resource type="Texture2D" uid="uid://b4600hfubxwu" path="res://assets/cenario/Horror_Wall_14-256x256.png" id="2_texture"]
[ext_resource type="PackedScene" uid="uid://hrpnqptcucfx" path="res://assets/killer/GLB/PSX_BagMan.glb" id="3_u3xk2"]
[ext_resource type="AudioStream" uid="uid://c7of15eee8cdu" path="res://assets/sounds/knife-atack.wav" id="4_hcaxd"]
[ext_resource type="AudioStream" uid="uid://ccp5in58rv5v" path="res://assets/sounds/foot-steps.wav" id="5_u3xk2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hcaxd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.3, 0.1, 0.1, 1)
albedo_texture = ExtResource("2_texture")
metallic = 0.2
roughness = 0.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
material = SubResource("StandardMaterial3D_1")
radius = 0.4

[sub_resource type="Skin" id="Skin_u3xk2"]

[sub_resource type="SphereShape3D" id="SphereShape3D_detection"]
radius = 15.0

[node name="Killer" type="CharacterBody3D"]
collision_layer = 4
script = ExtResource("1_killer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
material_override = SubResource("StandardMaterial3D_hcaxd")
mesh = SubResource("CapsuleMesh_1")
skin = SubResource("Skin_u3xk2")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
target_desired_distance = 0.5
path_max_distance = 3.0
avoidance_enabled = true
height = 2.0
max_speed = 3.5

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_detection")

[node name="PSX_BagMan" parent="." instance=ExtResource("3_u3xk2")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 0, 0)

[node name="VisionTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="StunParticles" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
emitting = false
amount = 20
lifetime = 0.5
explosiveness = 0.8
emission_shape = 1
emission_sphere_radius = 0.3
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 2.0
scale_amount_min = 0.1
scale_amount_max = 0.2
color = Color(1, 1, 0.5, 1)

[node name="AttackSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_hcaxd")
volume_db = -10.0
max_distance = 5.0

[node name="FootSteps" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_u3xk2")
volume_db = -5.0
max_distance = 50.0

[editable path="PSX_BagMan"]
